--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -4,7 +4,7 @@
   height: 215px;
   clear: both;
   margin: 0 auto;
-  background-color: #222222; }
+  background-color: #2980b9; }
   /* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
   .footer h2 {
     text-align: center;
