--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -1,6 +1,6 @@
 /* line 3, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
 .header {
-  background-color: #222222;
+  background-color: #2980b9;
   width: 100%; }
   /* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
   .header nav {
