--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -112,3 +112,8 @@ figure img {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px; }
+
+/* line 126, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.center-img {
+  display: block;
+  margin: 0 auto; }
