--- a/stylesheets/typography.css
+++ b/stylesheets/typography.css
@@ -1,40 +1,46 @@
-/* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
-p, ul li, a {
+/* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder {
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  color: #777777; }
+
+/* line 13, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+p, ul li, a, input {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #777777;
   line-height: 24px;
   letter-spacing: 0.5px; }
 
-/* line 14, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 p {
   font-size: 14px; }
 
-/* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 25, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a {
   text-decoration: none;
   color: #777777;
   font-family: "Lato", Helvetica, Arial, sans-serif; }
 
-/* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 31, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a:hover {
   color: #202020; }
 
-/* line 28, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
   color: #6f6e6e;
   font-family: "Arvo", serif; }
 
-/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 42, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .header h1 {
   color: #F3F3F3; }
-/* line 38, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .header li a {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #F3F3F3; }
 
-/* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 52, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .code {
   font-family: 'cousine' sans-serif; }
