--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -376,44 +376,50 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
-p, ul li, a {
+/* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder {
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  color: #777777; }
+
+/* line 13, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+p, ul li, a, input {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #777777;
   line-height: 24px;
   letter-spacing: 0.5px; }
 
-/* line 14, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 p {
   font-size: 14px; }
 
-/* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 25, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a {
   text-decoration: none;
   color: #777777;
   font-family: "Lato", Helvetica, Arial, sans-serif; }
 
-/* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 31, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a:hover {
   color: #202020; }
 
-/* line 28, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
   color: #6f6e6e;
   font-family: "Arvo", serif; }
 
-/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 42, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .header h1 {
   color: #F3F3F3; }
-/* line 38, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .header li a {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #F3F3F3; }
 
-/* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 52, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .code {
   font-family: 'cousine' sans-serif; }
 
@@ -508,34 +514,40 @@ figure img {
 
 /* line 100, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade {
-  opacity: 0.85;
-  -webkit-transition: opacity 2s;
-  transition: opacity 2s; }
+  opacity: 0.5;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
 
-/* line 106, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 107, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade:hover {
-  opacity: 1; }
+  opacity: 1;
+  top: -5px; }
 
-/* line 110, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 112, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .header-title {
   margin: 5%; }
 
-/* line 114, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 116, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .one-edge-shadow {
   -webkit-box-shadow: 0 8px 6px -6px black;
   -moz-box-shadow: 0 8px 6px -6px black;
   box-shadow: 0 8px 6px -6px black; }
 
-/* line 120, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 122, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .round-all {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px; }
 
-/* line 126, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 128, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .center-img {
   display: block;
   margin: 0 auto; }
+
+/* line 133, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.hide {
+  display: none; }
 
 /* line 3, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
 .header {
@@ -562,6 +574,10 @@ figure img {
       display: inline;
       padding: 0 40px 0 0;
       margin: 0; }
+      /* line 27, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
+      .header ul li a {
+        position: relative;
+        top: 0px; }
 
 /* line 1, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
 .footer {
@@ -628,11 +644,11 @@ figure img {
       border: none;
       padding: 15px 25px;
       color: #ffffff;
-      background-color: #222;
+      background-color: #777;
       opacity: 0.75;
-      -webkit-transition: all 0.5s;
-      -moz-transition: all 0.5s;
-      transition: all 0.5s; }
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
       /* line 42, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
       .contact form input.button:hover {
         background-color: #27ae60;
