--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -23,3 +23,7 @@
       display: inline;
       padding: 0 40px 0 0;
       margin: 0; }
+      /* line 27, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
+      .header ul li a {
+        position: relative;
+        top: 0px; }
